k8s_addons/dashboard/dashboard_https/dev-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dev-dashboard-gateway
  namespace: kubernetes-dashboard
spec:
  selector:
    istio: ingress
  servers:
  - hosts:
    - "dev-dashboard.banyancloud.io"
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
